--- a/src/pages/speaking.mdx
+++ b/src/pages/speaking.mdx
@@ -21,7 +21,7 @@ posts: [
 import Page from '../layouts/Page.astro';
 import PostLinks from '../components/PostLinks.astro';
 
-<Page title="Speaking">
+<Page title="Speaking" description="Are you interested in having me speak?" slug="speaking">
   ## Thanks for considering having me speak!
   I love to help people encounter Christ in a fresh way. Please feel free to check out some recent sample messages and let me know if I can help explore crafting a message that’s the right fit for your event, by contacting me at: joshbutler@redemptionaz.com.
   #### Sample Speaking Messages
